resize the main elements of page and their paddings to fix unintended horizontal scroll

--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -1,12 +1,12 @@
 .main {
-    width: min(100%, 900px);
+    width: min(calc(100% - 0.8em), 900px);
     height: 100%;
     min-height: 440px;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: max(60px, 10vh) 1fr 60px;
     row-gap: 10px;
-    padding: 0 5px;
+    padding: 0 0.4em;
 }
 .header > p , .header > h1 {
     margin: 0;
@@ -42,7 +42,7 @@
     width: 100%;
     height: max(150px, 30%);
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 5px 20px ;
 }
